# parsing-russian

./: pyproject.toml
parsing_russian/: __init__.py  __main__.py  subject_adjectives.txt
tests/: test_parsing_russian.py
