[tool.poetry]
name = "parsing-russian"
version = "0.1.0"
description = ""
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pcfg = "^0.1.2"
importlib-metadata = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
